--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Personal Portfolio</title>
-    <link rel="shortcut icon" href="../assets/images/user.jpg.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/user.jpg.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/0133b4cf5e.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -56,7 +56,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-1">
-                <img src="../assets/images/user.jpg.jpg" alt="">
+                <img src="assets/images/user.jpg.jpg" alt="">
             </div>
             <div class="col-sm-2">
                 <h1 class="sub-title">About me</h1>
@@ -126,7 +126,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="../assets/images/work-1.jpeg" alt="">
+                <img src="assets/images/work-1.jpeg" alt="">
                  <div class="layer">
                      <h3>Weather app</h3>
                      <p>A digital tool that provides users with real-time weather information for specific locations. </p>
@@ -134,7 +134,7 @@
                  </div>
             </div>
              <div class="work">
-                <img src="../assets/images/work-2.jpeg" alt="">
+                <img src="assets/images/work-2.jpeg" alt="">
                  <div class="layer">
                      <h3>Music App</h3>
                      <p>Digital platform that allows users to listen to, discover, and manage music. It typically offers features like streaming songs, creating playlists, and exploring curated music recommendations.  </p>
@@ -142,7 +142,7 @@
                  </div>
             </div>
             <div class="work">
-                <img src="../assets/images/work-3.jpeg" alt="">
+                <img src="assets/images/work-3.jpeg" alt="">
                 <div class="layer">
                      <h3>Photo App</h3>
                      <p>A digital tool that allows users to capture, edit, organize, and share photos </p>
@@ -169,7 +169,7 @@
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="../assets/images/Allan's%20CV.pdf" download class="btn2"> Download CV</a>
+                <a href="assets/images/Allan's%20CV.pdf" download class="btn2"> Download CV</a>
 
             </div>
             <div class="col-sm-2">
@@ -188,7 +188,7 @@
     </div>
 </div>
 
-<script src="../assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
